--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,15 +22,13 @@
     
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/ReciteTheme" >
         <activity
-            android:name=".Activity.MainActivity"
-            android:label="@string/app_name" >
+            android:name=".Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
